Updated each Add to Cart and Delete Button with JS

--- a/HTML-CATEGORIES/accessories.html
+++ b/HTML-CATEGORIES/accessories.html
@@ -142,7 +142,9 @@
         </figure>
         <figcaption class="productCaption">12inches x 10meters Plastic Wrap</figcaption>
         <p class="price">₱239.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -151,7 +153,9 @@
         </figure>
         <figcaption class="productCaption">12inches x 10meters Aluminum Foil</figcaption>
         <p class="price">₱310.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -160,7 +164,9 @@
         </figure>
         <figcaption class="productCaption">Aluminum Paper Towel with Holder</figcaption>
         <p class="price">₱179.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -169,7 +175,9 @@
         </figure>
         <figcaption class="productCaption">9inches Single Knitted Trivet</figcaption>
         <p class="price">₱110.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
         <div class="eachProduct">
@@ -178,7 +186,9 @@
         </figure>
         <figcaption class="productCaption">Plain Black Apron with Pocket</figcaption>
         <p class="price">₱174.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -187,7 +197,9 @@
         </figure>
         <figcaption class="productCaption">Transparent Vacuum Sealer Rolls</figcaption>
         <p class="price">₱275.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
 
@@ -197,7 +209,9 @@
         </figure>
         <figcaption class="productCaption">Fruit-Patterned Table Cloth 60inches x 90inches</figcaption>
         <p class="price">₱190.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -206,7 +220,9 @@
         </figure>
         <figcaption class="productCaption">Colorful Fruit and Vegetable Dishcloths</figcaption>
         <p class="price">₱358.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -215,7 +231,9 @@
         </figure>
         <figcaption class="productCaption">Fruit-Themed Square Coasters</figcaption>
         <p class="price">₱295.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -224,7 +242,9 @@
         </figure>
         <figcaption class="productCaption">Industrial Napkin Holder with Clip</figcaption>
         <p class="price">₱95.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -233,7 +253,9 @@
         </figure>
         <figcaption class="productCaption">White Fruit-Patterned Oven Mitt</figcaption>
         <p class="price">₱187.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -242,7 +264,9 @@
         </figure>
         <figcaption class="productCaption">Fruit-Patterned Square Pot Holder</figcaption>
         <p class="price">₱104.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -251,7 +275,9 @@
         </figure>
         <figcaption class="productCaption">Shades of Brown Pot Protectors</figcaption>
         <p class="price">₱422.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -260,7 +286,9 @@
         </figure>
         <figcaption class="productCaption">Stainless Steel Splatter Screen</figcaption>
         <p class="price">₱139.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -269,7 +297,9 @@
         </figure>
         <figcaption class="productCaption">Compact two-stage Knife Sharpener</figcaption>
         <p class="price">₱597.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -278,7 +308,9 @@
         </figure>
         <figcaption class="productCaption">Blue-colored Seafood Shears</figcaption>
         <p class="price">₱139.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div> 
 </div>
 
