--- a/HTML-CATEGORIES/knives.html
+++ b/HTML-CATEGORIES/knives.html
@@ -143,7 +143,9 @@
         </figure>
         <figcaption class="productCaption">12pcs Kitchen Knife Block Set</figcaption>
         <p class="price">₱2,455.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -152,7 +154,9 @@
         </figure>
         <figcaption class="productCaption">6pcs Elegant Kitchen Knife Set</figcaption>
         <p class="price">₱1,100.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -161,7 +165,9 @@
         </figure>
         <figcaption class="productCaption">5pcs Knife Block Set with Wood Handle</figcaption>
         <p class="price">₱1,499.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -170,7 +176,9 @@
         </figure>
         <figcaption class="productCaption">6pcs Stainless Steel Knife Roll Set</figcaption>
         <p class="price">₱1,359.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -179,7 +187,9 @@
         </figure>
         <figcaption class="productCaption">5pcs Stainless Steel Knives with Magnetic Holder</figcaption>
         <p class="price">₱1,560.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -188,7 +198,9 @@
         </figure>
         <figcaption class="productCaption">4pcs Kitchen Knife Block Set</figcaption>
         <p class="price">₱1,780.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -197,7 +209,9 @@
         </figure>
         <figcaption class="productCaption">7pcs Chef's Choice Knife Set</figcaption>
         <p class="price">₱2,370.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -206,7 +220,9 @@
         </figure>
         <figcaption class="productCaption">5pcs Floral Handle Knives with Magnetic Holder</figcaption>
         <p class="price">₱1,945.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 </div>
 
@@ -223,7 +239,9 @@
         </figure>
         <figcaption class="productCaption">10inches Commercial Bread Knife</figcaption>
         <p class="price">₱239.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -232,7 +250,9 @@
         </figure>
         <figcaption class="productCaption">9inches Modern Offset Bread Knife</figcaption>
         <p class="price">₱320.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -241,7 +261,9 @@
         </figure>
         <figcaption class="productCaption">8inches Bread Knife with Sheath</figcaption>
         <p class="price">₱399.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -250,7 +272,9 @@
         </figure>
         <figcaption class="productCaption">10inches Confectioner's Knife</figcaption>
         <p class="price">₱305.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -259,7 +283,9 @@
         </figure>
         <figcaption class="productCaption">10inches Curved Bread Knife</figcaption>
         <p class="price">₱299.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -268,7 +294,9 @@
         </figure>
         <figcaption class="productCaption">10inches Classic Wide Bread Knife</figcaption>
         <p class="price">₱420.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -277,7 +305,9 @@
         </figure>
         <figcaption class="productCaption">9inches Curved Bread Knife</figcaption>
         <p class="price">₱365.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -286,7 +316,9 @@
         </figure>
         <figcaption class="productCaption">8inches Professional Bread Knife</figcaption>
         <p class="price">₱390.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 </div>
 
@@ -302,7 +334,9 @@
         </figure>
         <figcaption class="productCaption">3.5inches Paring Knife with Black Handle</figcaption>
         <p class="price">₱310.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -311,7 +345,9 @@
         </figure>
         <figcaption class="productCaption">3.5inches White Paring Knife</figcaption>
         <p class="price">₱355.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -320,7 +356,9 @@
         </figure>
         <figcaption class="productCaption">3inches Vegetable Paring Knife</figcaption>
         <p class="price">₱305.00</p>
-        <button id="addToCart" class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -329,7 +367,9 @@
         </figure>
         <figcaption class="productCaption">4inches Stainless Steel Paring Knife</figcaption>
         <p class="price">₱290.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -338,7 +378,9 @@
         </figure>
         <figcaption class="productCaption">4inches Paring Knife with Wooden Handle</figcaption>
         <p class="price">₱265.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -347,7 +389,9 @@
         </figure>
         <figcaption class="productCaption">4inches Vegetable Knife with Wood Handle</figcaption>
         <p class="price">₱248.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -356,7 +400,9 @@
         </figure>
         <figcaption class="productCaption">3inches Serrated Paring Knife</figcaption>
         <p class="price">₱277.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -365,7 +411,9 @@
         </figure>
         <figcaption class="productCaption">3.5inches Green Paring Knife with Sheath</figcaption>
         <p class="price">₱458.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 </div>
 
@@ -381,7 +429,9 @@
         </figure>
         <figcaption class="productCaption">9inches Stainless Steel Utility Knife</figcaption>
         <p class="price">₱360.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -390,7 +440,9 @@
         </figure>
         <figcaption class="productCaption">8inches Classic Utility Knife</figcaption>
         <p class="price">₱320.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -399,7 +451,9 @@
         </figure>
         <figcaption class="productCaption">6inches Modern Utility Knife</figcaption>
         <p class="price">₱304.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -408,7 +462,9 @@
         </figure>
         <figcaption class="productCaption">5inches White Serrated Utility Knife</figcaption>
         <p class="price">₱480.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -417,7 +473,9 @@
         </figure>
         <figcaption class="productCaption">7inches Stainless Steel Asian Utility Knife</figcaption>
         <p class="price">₱670.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -426,7 +484,9 @@
         </figure>
         <figcaption class="productCaption">6.5inches Master Utility Knife</figcaption>
         <p class="price">₱295.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -435,7 +495,9 @@
         </figure>
         <figcaption class="productCaption">5inches Stainless Steel Utility Knife</figcaption>
         <p class="price">₱259.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -444,7 +506,9 @@
         </figure>
         <figcaption class="productCaption">6inches Serrated Utility Knife</figcaption>
         <p class="price">₱330.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 </div>
 
