--- a/HTML-CATEGORIES/utensils.html
+++ b/HTML-CATEGORIES/utensils.html
@@ -144,7 +144,9 @@
         </figure>
         <figcaption class="productCaption">3pcs Starter Kitchen Tool Set</figcaption>
         <p class="price">₱435.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -153,7 +155,9 @@
         </figure>
         <figcaption class="productCaption">5pcs Stainless Steel Kitchen Tool Set</figcaption>
         <p class="price">₱699.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -162,7 +166,9 @@
         </figure>
         <figcaption class="productCaption">Set of 4 Black Kitchen Utensils</figcaption>
         <p class="price">₱498.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -171,7 +177,9 @@
         </figure>
         <figcaption class="productCaption">3pcs  Stainless Steel Grilling Set</figcaption>
         <p class="price">₱410.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -180,7 +188,9 @@
         </figure>
         <figcaption class="productCaption">Set of 5 NonStick Utensil Set</figcaption>
         <p class="price">₱615.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -189,7 +199,9 @@
         </figure>
         <figcaption class="productCaption">Classic Essential Kitchen Tool Set of 4</figcaption>
         <p class="price">₱679.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -198,7 +210,9 @@
         </figure>
         <figcaption class="productCaption">8pcs Stainless Steel Utensil Set</figcaption>
         <p class="price">₱790.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -207,7 +221,9 @@
         </figure>
         <figcaption class="productCaption">Gray Utensil Crock with Silicone Tools</figcaption>
         <p class="price">₱499.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 </div>
 
@@ -224,7 +240,9 @@
         </figure>
         <figcaption class="productCaption">Elegant Stainless Steel Flatware Set</figcaption>
         <p class="price">₱365.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -233,7 +251,9 @@
         </figure>
         <figcaption class="productCaption">Set of 5 Stainless Steel Flatware Set</figcaption>
         <p class="price">₱415.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -242,7 +262,9 @@
         </figure>
         <figcaption class="productCaption">Classic Sleek Flatware Set</figcaption>
         <p class="price">₱320.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -251,7 +273,9 @@
         </figure>
         <figcaption class="productCaption">5pcs Modern Flatware Set</figcaption>
         <p class="price">₱309.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -260,7 +284,9 @@
         </figure>
         <figcaption class="productCaption">9pcs  Stainless Steel Elegant Flatware Set</figcaption>
         <p class="price">₱575.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -269,7 +295,9 @@
         </figure>
         <figcaption class="productCaption">12pcs Polished Flatware Set</figcaption>
         <p class="price">₱795.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -278,7 +306,9 @@
         </figure>
         <figcaption class="productCaption">Elegant Copper Flatware Set</figcaption>
         <p class="price">₱499.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -287,7 +317,9 @@
         </figure>
         <figcaption class="productCaption">Set of 12 Wooden Handled Flatware Set</figcaption>
         <p class="price">₱1,105.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 </div>
 
@@ -305,7 +337,9 @@
         </figure>
         <figcaption class="productCaption">Stainless Steel Fish Turner</figcaption>
         <p class="price">₱278.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -314,7 +348,9 @@
         </figure>
         <figcaption class="productCaption">Black Slotted Spatula</figcaption>
         <p class="price">₱250.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -323,7 +359,9 @@
         </figure>
         <figcaption class="productCaption">Nylon Square Turner</figcaption>
         <p class="price">₱215.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -332,7 +370,9 @@
         </figure>
         <figcaption class="productCaption">Nylon Flexible Turner</figcaption>
         <p class="price">₱220.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -341,7 +381,9 @@
         </figure>
         <figcaption class="productCaption">Cut and Serve Turner</figcaption>
         <p class="price">₱219.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -350,7 +392,9 @@
         </figure>
         <figcaption class="productCaption">Stainless Steel Spatula</figcaption>
         <p class="price">₱299.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -359,7 +403,9 @@
         </figure>
         <figcaption class="productCaption">Cookie Spatula</figcaption>
         <p class="price">₱204.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -368,7 +414,9 @@
         </figure>
         <figcaption class="productCaption">13in. Flexible Turner</figcaption>
         <p class="price">₱249.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 </div>
 
