--- a/HTML-VIEW MORE pages/accessories-P2-viewmore.html
+++ b/HTML-VIEW MORE pages/accessories-P2-viewmore.html
@@ -142,7 +142,9 @@
         </figure>
         <figcaption class="productCaption">Wooden Knife Block</figcaption>
         <p class="price">₱399.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -151,7 +153,9 @@
         </figure>
         <figcaption class="productCaption">Wooden Knife Organizer</figcaption>
         <p class="price">₱279.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -160,7 +164,9 @@
         </figure>
         <figcaption class="productCaption">Canning Essentials Kit</figcaption>
         <p class="price">₱380.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -169,7 +175,9 @@
         </figure>
         <figcaption class="productCaption">Stainless Steel Hanger</figcaption>
         <p class="price">₱109.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -178,7 +186,9 @@
         </figure>
         <figcaption class="productCaption">Stainless Steel Oil Sprayer</figcaption>
         <p class="price">₱175.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -187,7 +197,9 @@
         </figure>
         <figcaption class="productCaption">Cast Iron Brush</figcaption>
         <p class="price">₱105.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -196,7 +208,9 @@
         </figure>
         <figcaption class="productCaption">Stainless Steel Tongs</figcaption>
         <p class="price">₱125.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -205,7 +219,9 @@
         </figure>
         <figcaption class="productCaption">12in x 30in Foil Dispenser</figcaption>
         <p class="price">₱370.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -214,7 +230,9 @@
         </figure>
         <figcaption class="productCaption">Grill Surface Thermometer</figcaption>
         <p class="price">₱108.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -223,7 +241,9 @@
         </figure>
         <figcaption class="productCaption">18in Mesh Food Cover</figcaption>
         <p class="price">₱179.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 </div>
 
