--- a/HTML-VIEW MORE pages/bestSeller-P2-viewmore.html
+++ b/HTML-VIEW MORE pages/bestSeller-P2-viewmore.html
@@ -142,7 +142,9 @@
         </figure>
         <figcaption class="productCaption">Nested Navy Blue Baking Dishes</figcaption>
         <p class="price">₱1,375.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -151,7 +153,9 @@
         </figure>
         <figcaption class="productCaption">Tomato-Shaped Ceramic Casserole</figcaption>
         <p class="price">₱1,099.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -160,7 +164,9 @@
         </figure>
         <figcaption class="productCaption">Set of 3 Ceramic Baking Dishes</figcaption>
         <p class="price">₱1,295.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -169,7 +175,9 @@
         </figure>
         <figcaption class="productCaption">Futuristic Western Slow Cookers</figcaption>
         <p class="price">₱1,999.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -178,7 +186,9 @@
         </figure>
         <figcaption class="productCaption">Ceramic Rotating Serving Platter</figcaption>
         <p class="price">₱875.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -187,7 +197,9 @@
         </figure>
         <figcaption class="productCaption">Elegant Three-Tiered Marble Serving Stand</figcaption>
         <p class="price">₱695.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -196,7 +208,9 @@
         </figure>
         <figcaption class="productCaption">Shiny Stainless Steel Espresso Machine</figcaption>
         <p class="price">₱2,675.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -205,7 +219,9 @@
         </figure>
         <figcaption class="productCaption">Compact Personal Blender Set</figcaption>
         <p class="price">₱1,830.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -214,7 +230,9 @@
         </figure>
         <figcaption class="productCaption">Red Enameled Casserole with Cover</figcaption>
         <p class="price">₱525.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -223,7 +241,9 @@
         </figure>
         <figcaption class="productCaption">Vibrant Red Saute Pan with Glass Cover</figcaption>
         <p class="price">₱489.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 </div>
 
