--- a/HTML-VIEW MORE pages/bestSeller-P3-viewmore.html
+++ b/HTML-VIEW MORE pages/bestSeller-P3-viewmore.html
@@ -142,7 +142,9 @@
         </figure>
         <figcaption class="productCaption">Set of 3 Golden-Brown Cocottes</figcaption>
         <p class="price">₱1,055.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -151,7 +153,9 @@
         </figure>
         <figcaption class="productCaption">Black Modern Cookware Set of 3</figcaption>
         <p class="price">₱1,359.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -160,7 +164,9 @@
         </figure>
         <figcaption class="productCaption">Grilling Tools in a Sleek Aluminum Case</figcaption>
         <p class="price">₱1,785.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -169,7 +175,9 @@
         </figure>
         <figcaption class="productCaption">Colorful Mini Frying Pan Set of 4</figcaption>
         <p class="price">₱890.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 </div>
 
