--- a/HTML-VIEW MORE pages/cookwares-frying-P2-viewmore.html
+++ b/HTML-VIEW MORE pages/cookwares-frying-P2-viewmore.html
@@ -143,7 +143,9 @@
         </figure>
         <figcaption class="productCaption">5inches Mini Ceramic Nonstick Egg Pan</figcaption>
         <p class="price">₱387.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -152,7 +154,9 @@
         </figure>
         <figcaption class="productCaption">11inches Black NonStick Paella Pan</figcaption>
         <p class="price">₱320.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -161,7 +165,9 @@
         </figure>
         <figcaption class="productCaption">12in Hard Anodized Ceramic FryingPan</figcaption>
         <p class="price">₱380.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -170,7 +176,9 @@
         </figure>
         <figcaption class="productCaption">12inches Black Carbon Steel Frying Pan</figcaption>
         <p class="price">₱299.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -179,7 +187,9 @@
         </figure>
         <figcaption class="productCaption">12inches Pink Cast Iron Frying Pan</figcaption>
         <p class="price">₱375.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -188,7 +198,9 @@
         </figure>
         <figcaption class="productCaption">10inches Black Cast Iron Skillet</figcaption>
         <p class="price">₱323.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -197,7 +209,9 @@
         </figure>
         <figcaption class="productCaption">12inches Oval Fry Pan with Lid</figcaption>
         <p class="price">₱385.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -206,7 +220,9 @@
         </figure>
         <figcaption class="productCaption">10inches Stainless Steel Frying Pan</figcaption>
         <p class="price">₱270.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 </div>
 
