--- a/HTML-VIEW MORE pages/cookwares-pots-P2-viewmore.html
+++ b/HTML-VIEW MORE pages/cookwares-pots-P2-viewmore.html
@@ -143,7 +143,9 @@
         </figure>
         <figcaption class="productCaption">8Qt. Nonstick Stockpot with Lid</figcaption>
         <p class="price">₱379.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -152,7 +154,9 @@
         </figure>
         <figcaption class="productCaption">4Qt. Non-stick Stockpot with Lid</figcaption>
         <p class="price">₱295.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -161,7 +165,9 @@
         </figure>
         <figcaption class="productCaption">8Qt. Non-Stick Stockpot with Lid</figcaption>
         <p class="price">389.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -170,7 +176,9 @@
         </figure>
         <figcaption class="productCaption">4Qt. Non-stick Ceramic Stockpot with Lid</figcaption>
         <p class="price">₱399.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -179,7 +187,9 @@
         </figure>
         <figcaption class="productCaption">3.8Qt. Petite Enamel On Steel Stockpot</figcaption>
         <p class="price">₱424.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -188,7 +198,9 @@
         </figure>
         <figcaption class="productCaption">10Qt. Aluminum Stockpot with Lid</figcaption>
         <p class="price">₱409.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -197,7 +209,9 @@
         </figure>
         <figcaption class="productCaption">10Qt. Enamel Stockpot with Knob</figcaption>
         <p class="price">₱785.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -206,7 +220,9 @@
         </figure>
         <figcaption class="productCaption">9Qt. Olive-green Steel Stockpot</figcaption>
         <p class="price">₱670.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 </div>
 
