--- a/HTML-VIEW MORE pages/kitchenappliances-P2-viewmore.html
+++ b/HTML-VIEW MORE pages/kitchenappliances-P2-viewmore.html
@@ -141,7 +141,9 @@
         </figure>
         <figcaption class="productCaption">Sleek Matte Black Edition Coffee Grinder</figcaption>
         <p class="price">₱1,479.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -150,7 +152,9 @@
         </figure>
         <figcaption class="productCaption">Stainless Dual Basket Immersion Deep Fryer</figcaption>
         <p class="price">₱3,289.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -159,7 +163,9 @@
         </figure>
         <figcaption class="productCaption">Classic Stainless Steel Toaster Oven</figcaption>
         <p class="price">₱1,280.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -168,7 +174,9 @@
         </figure>
         <figcaption class="productCaption">Black Electric Griddle Latest Model</figcaption>
         <p class="price">₱1,275.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -177,7 +185,9 @@
         </figure>
         <figcaption class="productCaption">Light-weight Double-burner Electric Hot Plate</figcaption>
         <p class="price">₱2,419.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -186,7 +196,9 @@
         </figure>
         <figcaption class="productCaption">Round Black Electric Fryer with Cover</figcaption>
         <p class="price">₱1,229.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -195,7 +207,9 @@
         </figure>
         <figcaption class="productCaption">Stainless Modern Bread Maker</figcaption>
         <p class="price">₱1,505.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -204,7 +218,9 @@
         </figure>
         <figcaption class="productCaption">3cups Quick Cook Rice Cooker</figcaption>
         <p class="price">₱1,390.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -213,7 +229,9 @@
         </figure>
         <figcaption class="productCaption">Heavy Duty Silver Stand Mixer</figcaption>
         <p class="price">₱3,058.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -222,7 +240,9 @@
         </figure>
         <figcaption class="productCaption">Hand Mixer with Accessories</figcaption>
         <p class="price">₱965.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -231,7 +251,9 @@
         </figure>
         <figcaption class="productCaption">Modern Cast Iron Fondue Set</figcaption>
         <p class="price">₱1,254.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -240,7 +262,9 @@
         </figure>
         <figcaption class="productCaption">Classic Black Medium Waffle Maker</figcaption>
         <p class="price">₱869.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -249,7 +273,9 @@
         </figure>
         <figcaption class="productCaption">Stainless Steel Egg Steamer</figcaption>
         <p class="price">₱1,169.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -258,7 +284,9 @@
         </figure>
         <figcaption class="productCaption">Stainless Steel Digital Toaster</figcaption>
         <p class="price">₱1,969.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 </div>
 
