--- a/HTML-VIEW MORE pages/knife-paring-p2-viewmore.html
+++ b/HTML-VIEW MORE pages/knife-paring-p2-viewmore.html
@@ -143,7 +143,9 @@
         </figure>
         <figcaption class="productCaption">3-piece Black Starter Knife Set</figcaption>
         <p class="price">₱499.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -152,7 +154,9 @@
         </figure>
         <figcaption class="productCaption">3-piece 4in Colorful Non Stick Paring Knife Set</figcaption>
         <p class="price">₱529.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -161,7 +165,9 @@
         </figure>
         <figcaption class="productCaption">2-piece Shear and Paring Knife Set</figcaption>
         <p class="price">₱320.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -170,7 +176,9 @@
         </figure>
         <figcaption class="productCaption">2-piece Vegetable Knife Set</figcaption>
         <p class="price">₱309.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -179,7 +187,9 @@
         </figure>
         <figcaption class="productCaption">3.5inches Paring Knife with Wooden Handle</figcaption>
         <p class="price">₱145.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -188,7 +198,9 @@
         </figure>
         <figcaption class="productCaption">2.5inches Bird's Beak Paring Knife</figcaption>
         <p class="price">₱125.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -197,7 +209,9 @@
         </figure>
         <figcaption class="productCaption">2.25inches White Peeling Knife</figcaption>
         <p class="price">₱125.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -206,7 +220,9 @@
         </figure>
         <figcaption class="productCaption">3.5inches Paring Knife with Sheath</figcaption>
         <p class="price">₱279.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 </div>
 
