--- a/HTML-VIEW MORE pages/limitedOffer-P2-viewmore.html
+++ b/HTML-VIEW MORE pages/limitedOffer-P2-viewmore.html
@@ -142,7 +142,9 @@
         </figure>
         <figcaption class="productCaption">2pcs Clear Double-Walled Glass Mugs</figcaption>
         <p class="price">₱329.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -151,7 +153,9 @@
         </figure>
         <figcaption class="productCaption">4pcs Golden Brown Ceramic Mugs</figcaption>
         <p class="price">₱540.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -160,7 +164,9 @@
         </figure>
         <figcaption class="productCaption">Pastel Ceramic Mixing Bowls Set of 5</figcaption>
         <p class="price">₱346.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -169,7 +175,9 @@
         </figure>
         <figcaption class="productCaption">Elegant Cream-Colored Dinnerware Display</figcaption>
         <p class="price">₱277.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -178,7 +186,9 @@
         </figure>
         <figcaption class="productCaption">Set of 3 Geometric Design Dishware</figcaption>
         <p class="price">₱290.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -187,7 +197,9 @@
         </figure>
         <figcaption class="productCaption">Elegant Light Red Dinnerware Set</figcaption>
         <p class="price">₱528.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -196,7 +208,9 @@
         </figure>
         <figcaption class="productCaption">Minimalist three-tiered Serving Platter Set</figcaption>
         <p class="price">₱975.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -205,7 +219,9 @@
         </figure>
         <figcaption class="productCaption">Plastic Food Keeper with Cover</figcaption>
         <p class="price">₱210.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -214,7 +230,9 @@
         </figure>
         <figcaption class="productCaption">3pcs Light Green Ceramic Baking Dishes</figcaption>
         <p class="price">₱885.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -223,7 +241,9 @@
         </figure>
         <figcaption class="productCaption">Set of 6 Blue Crystal Glasses</figcaption>
         <p class="price">₱699.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 </div>
 
