--- a/HTML-VIEW MORE pages/utensils-SPL-P2-viewmore.html
+++ b/HTML-VIEW MORE pages/utensils-SPL-P2-viewmore.html
@@ -143,7 +143,9 @@
         </figure>
         <figcaption class="productCaption">5-piece Stainless Steel Flatware Set</figcaption>
         <p class="price">₱409.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -152,7 +154,9 @@
         </figure>
         <figcaption class="productCaption">1 Set of Stainless Steel Spoon, Fork and Knife</figcaption>
         <p class="price">₱389.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -161,7 +165,9 @@
         </figure>
         <figcaption class="productCaption">3-piece Stainless Steel Spoon and Fork Set</figcaption>
         <p class="price">₱370.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -170,7 +176,9 @@
         </figure>
         <figcaption class="productCaption">1Pair Elegant Stainless Steel Spoon and Fork</figcaption>
         <p class="price">₱239.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -179,7 +187,9 @@
         </figure>
         <figcaption class="productCaption">1-piece Slotted Spoon with Black Plastic Handle</figcaption>
         <p class="price">₱119.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -188,7 +198,9 @@
         </figure>
         <figcaption class="productCaption">1-piece Stainless Steel Polished Ladle</figcaption>
         <p class="price">₱179.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -197,7 +209,9 @@
         </figure>
         <figcaption class="productCaption">1-piece Sleek Stainless Steel Pasta Server</figcaption>
         <p class="price">₱205.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -206,7 +220,9 @@
         </figure>
         <figcaption class="productCaption">1-piece Gray Angled Mixing Spoon</figcaption>
         <p class="price">₱190.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -215,7 +231,9 @@
         </figure>
         <figcaption class="productCaption">1-piece Multi-Purpose Silicone Spoon</figcaption>
         <p class="price">₱165.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -224,7 +242,9 @@
         </figure>
         <figcaption class="productCaption">1-piece Modern Black Soup Ladle</figcaption>
         <p class="price">₱159.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -233,7 +253,9 @@
         </figure>
         <figcaption class="productCaption">1-piece Silicone Ladle with Wooden Handle</figcaption>
         <p class="price">₱149.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -242,7 +264,9 @@
         </figure>
         <figcaption class="productCaption">1-piece Matte Black Slotted Spoon</figcaption>
         <p class="price">₱179.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 </div>
 
