--- a/HTML-CATEGORIES/cookwares.html
+++ b/HTML-CATEGORIES/cookwares.html
@@ -143,7 +143,9 @@
         </figure>
         <figcaption class="productCaption">Classic Steel Wok with Bamboo Grip</figcaption>
         <p class="price">₱1,299.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -152,7 +154,9 @@
         </figure>
         <figcaption class="productCaption">Classic Carbon Steel Wok with Wooden Handle</figcaption>
         <p class="price">₱775.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -161,7 +165,9 @@
         </figure>
         <figcaption class="productCaption">Modern Style Shiny Frying Pan</figcaption>
         <p class="price">₱468.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
 
@@ -171,7 +177,9 @@
         </figure>
         <figcaption class="productCaption">Classic Style Cast Iron Skillet</figcaption>
         <p class="price">₱495.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -180,7 +188,9 @@
         </figure>
         <figcaption class="productCaption">11inches Elegant Frying Pan</figcaption>
         <p class="price">₱480.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -189,7 +199,9 @@
         </figure>
         <figcaption class="productCaption">11inches Carbon Steel Frying Pan</figcaption>
         <p class="price">₱425.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -198,7 +210,9 @@
         </figure>
         <figcaption class="productCaption">8inches Black Frying Pan with Wooden Handle</figcaption>
         <p class="price">₱405.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -207,7 +221,9 @@
         </figure>
         <figcaption class="productCaption">8inches Round Cast Iron Skillet</figcaption>
         <p class="price">₱439.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 </div>
 
@@ -224,7 +240,9 @@
         </figure>
         <figcaption class="productCaption">Orange Grill Pan</figcaption>
         <p class="price">₱597.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -233,7 +251,9 @@
         </figure>
         <figcaption class="productCaption">Blue Enamel Grill Pan</figcaption>
         <p class="price">₱599.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -242,7 +262,9 @@
         </figure>
         <figcaption class="productCaption">Non Stick Grill Pan</figcaption>
         <p class="price">₱540.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
 
@@ -252,7 +274,9 @@
         </figure>
         <figcaption class="productCaption">Deep Square Grill Pan</figcaption>
         <p class="price">₱559.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -261,7 +285,9 @@
         </figure>
         <figcaption class="productCaption">Mini Panini Pan with Press</figcaption>
         <p class="price">₱630.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -270,7 +296,9 @@
         </figure>
         <figcaption class="productCaption">11in. Square Griddle Pan</figcaption>
         <p class="price">₱489.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -279,7 +307,9 @@
         </figure>
         <figcaption class="productCaption">11in. BBQ Grill Pan</figcaption>
         <p class="price">₱540.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -288,7 +318,9 @@
         </figure>
         <figcaption class="productCaption">12inches Square Grill Pan</figcaption>
         <p class="price">₱499.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 </div>
 
@@ -304,7 +336,9 @@
         </figure>
         <figcaption class="productCaption">6.25Qt. Stainless Steel Round Stockpot with Lid</figcaption>
         <p class="price">₱890.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -313,7 +347,9 @@
         </figure>
         <figcaption class="productCaption">12cup Modern Stainless Steel Saucepan</figcaption>
         <p class="price">₱785.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -322,7 +358,9 @@
         </figure>
         <figcaption class="productCaption">0.7Qt. Mini Stockpot with Glass Lid</figcaption>
         <p class="price">₱930.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
 
@@ -332,7 +370,9 @@
         </figure>
         <figcaption class="productCaption">8Qt. Stainless Steel 3-Ply Base Stockpt with Lid</figcaption>
         <p class="price">₱799.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -341,7 +381,9 @@
         </figure>
         <figcaption class="productCaption">8.3Qt. Stainless Steel Deep Stockpot</figcaption>
         <p class="price">₱710.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -350,7 +392,9 @@
         </figure>
         <figcaption class="productCaption">8Qt. Stainless Steel Stockpot</figcaption>
         <p class="price">₱649.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -359,7 +403,9 @@
         </figure>
         <figcaption class="productCaption">7.5Qt. Deep Round Stockpot & Colander Insert</figcaption>
         <p class="price">₱1,245.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -368,7 +414,9 @@
         </figure>
         <figcaption class="productCaption">7Qt Stainless Steel Stockpot with Lid</figcaption>
         <p class="price">₱846.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 </div>
 
