--- a/HTML-VIEW MORE pages/knife-bread-P2-viewmore.html
+++ b/HTML-VIEW MORE pages/knife-bread-P2-viewmore.html
@@ -126,6 +126,7 @@
         <a href="/HTML-CATEGORIES/utensils.html">Spatula and Turner</a>
     </ul>
 </div>
+
 <div>
     <ul>
         <li><a href="/index.html">HOME</a></li>
@@ -142,7 +143,9 @@
         </figure>
         <figcaption class="productCaption">14inches Serrated Edge Cake Slicer</figcaption>
         <p class="price">₱299.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -151,7 +154,9 @@
         </figure>
         <figcaption class="productCaption">8inches Serrated Bread Knife</figcaption>
         <p class="price">₱259.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -160,7 +165,9 @@
         </figure>
         <figcaption class="productCaption">8.75inches Serrated Bread Knife</figcaption>
         <p class="price">₱280.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -169,7 +176,9 @@
         </figure>
         <figcaption class="productCaption">9inches Serrated Bread Knife</figcaption>
         <p class="price">₱209.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -178,7 +187,9 @@
         </figure>
         <figcaption class="productCaption">6inches Classic Ceramic Bread Knife</figcaption>
         <p class="price">₱375.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -187,7 +198,9 @@
         </figure>
         <figcaption class="productCaption">8.25inches Stainless Steel Bread Knife</figcaption>
         <p class="price">₱305.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -196,7 +209,9 @@
         </figure>
         <figcaption class="productCaption">9inches Bread Knife with Wooden Handle</figcaption>
         <p class="price">₱285.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -205,7 +220,9 @@
         </figure>
         <figcaption class="productCaption">8.5inches  Stainless Steel Bread Knife</figcaption>
         <p class="price">₱270.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 </div>
 
