--- a/HTML-VIEW MORE pages/knife-set-p2-viewmore.html
+++ b/HTML-VIEW MORE pages/knife-set-p2-viewmore.html
@@ -143,7 +143,9 @@
         </figure>
         <figcaption class="productCaption">19pcs Classic Knife Set</figcaption>
         <p class="price">₱2,399.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -152,7 +154,9 @@
         </figure>
         <figcaption class="productCaption">14pcs Knives</figcaption>
         <p class="price">₱2,279.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -161,7 +165,9 @@
         </figure>
         <figcaption class="productCaption">2-piece Kitchen Knives</figcaption>
         <p class="price">₱580.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -170,7 +176,9 @@
         </figure>
         <figcaption class="productCaption">5pcs Knives</figcaption>
         <p class="price">₱909.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -179,7 +187,9 @@
         </figure>
         <figcaption class="productCaption">2pcs Knife Set</figcaption>
         <p class="price">₱575.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -188,7 +198,9 @@
         </figure>
         <figcaption class="productCaption">6pcs Knives</figcaption>
         <p class="price">₱1,105.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -197,7 +209,9 @@
         </figure>
         <figcaption class="productCaption">5pcs Stainless Steel Knives</figcaption>
         <p class="price">₱1,425.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -206,7 +220,9 @@
         </figure>
         <figcaption class="productCaption">6pcs Knives</figcaption>
         <p class="price">₱1,670.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 </div>
 
