--- a/HTML-VIEW MORE pages/knife-utility-p2-viewmore.html
+++ b/HTML-VIEW MORE pages/knife-utility-p2-viewmore.html
@@ -142,7 +142,9 @@
         </figure>
         <figcaption class="productCaption">3pcs Utility Knife Set</figcaption>
         <p class="price">₱380.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -151,7 +153,9 @@
         </figure>
         <figcaption class="productCaption">2pcs Asian Utility Knife Set</figcaption>
         <p class="price">₱320.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -160,7 +164,9 @@
         </figure>
         <figcaption class="productCaption">2pcs Veggie Knife Set</figcaption>
         <p class="price">₱280.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -169,7 +175,9 @@
         </figure>
         <figcaption class="productCaption">3-piece Santoku Knife</figcaption>
         <p class="price">₱609.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -178,7 +186,9 @@
         </figure>
         <figcaption class="productCaption">5in Serrated Utility Knife</figcaption>
         <p class="price">₱175.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -187,7 +197,9 @@
         </figure>
         <figcaption class="productCaption">5in Utility Knife w/ Sheath</figcaption>
         <p class="price">₱305.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -196,7 +208,9 @@
         </figure>
         <figcaption class="productCaption">Sleek Black Santoku Knife</figcaption>
         <p class="price">₱225.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -205,7 +219,9 @@
         </figure>
         <figcaption class="productCaption">5inches Foldable Knife</figcaption>
         <p class="price">₱270.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 </div>
 
