--- a/HTML-VIEW MORE pages/limitedOffer-P3-viewmore.html
+++ b/HTML-VIEW MORE pages/limitedOffer-P3-viewmore.html
@@ -142,7 +142,9 @@
         </figure>
         <figcaption class="productCaption">Set of 10 Stainless Steel Grilling Tools</figcaption>
         <p class="price">₱1,495.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -151,7 +153,9 @@
         </figure>
         <figcaption class="productCaption">Set of 6 Ceramic Rainbow Mugs</figcaption>
         <p class="price">₱679.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -160,7 +164,9 @@
         </figure>
         <figcaption class="productCaption">Minimalist Ceramic Dinnerware Set</figcaption>
         <p class="price">₱1,695.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 
     <div class="eachProduct">
@@ -169,7 +175,9 @@
         </figure>
         <figcaption class="productCaption">Set of 3 Pastel Purple Plates</figcaption>
         <p class="price">₱435.00</p>
-        <button class="addToCart">Add to Cart</button>
+        <div class="addandTrashSection">
+            <button class="addToCart">Add to Cart</button><span><i class="fa-solid fa-trash-can"></i></span>
+        </div>
     </div>
 </div>
 
